--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
 	</td>
 
 	<td align="Left" valign="center">
-	<b>ECE & Software Developer</b><br><a href="https://www.linkedin.com/in/jwong6">Jonathan Wong</a><br>Computer <br>Systems Engineering
+	<b>ECE & Software Developer</b><br><a href="https://www.linkedin.com/in/jwong6">Jonathan Wong</a><br>Computer Engineering<br>Systems Engineering
 	</td>
 	
 	</tr>
