--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
 	</td>
 
 	<td align="Left" valign="center">
-	<b>Project Leader</b><br><a href="https://www.linkedin.com/in/hjferra">Hyun June Ferrabolli</a><br>Mechanical Engineering<br>Systems Engineering
+	<b>Project Manager</b><br><a href="https://www.linkedin.com/in/hjferra">Hyun June Ferrabolli</a><br>Mechanical Engineering<br>Systems Engineering
 	</td>
 	
 	<td align="center" valign="center">
@@ -257,7 +257,7 @@
 	</td>
 
 	<td align="Left" valign="center">
-	<b>ECE & Software Developer</b><br><a href="https://www.linkedin.com/in/jwong6">Jonathan Wong</a><br>Computer Engineering<br>Systems Engineering
+	<b>Electrical & Computer Engineer</b><br><a href="https://www.linkedin.com/in/jwong6">Jonathan Wong</a><br>Computer Engineering<br>Systems Engineering
 	</td>
 	
 	</tr>
@@ -277,7 +277,7 @@
 	</td>
 
 	<td align="Left" valign="center">
-	<b>Mechanical Design & Drafter</b><br><a href="https://www.linkedin.com/pub/ryan-chen/73/77a/328">Ryan Chen</a><br>Mechanical Engineering<br>Visual Arts & Technology
+	<b>Industrial Designer</b><br><a href="https://www.linkedin.com/pub/ryan-chen/73/77a/328">Ryan Chen</a><br>Mechanical Engineering<br>Visual Arts & Technology
 	</td>	
 
 	</tr>
