--- a/index.html
+++ b/index.html
@@ -53,16 +53,16 @@
           <!-- Tab List -->
             <ul class='etabs'>
                 <li class='tab' id="tab-about">
-                  <a href="#about"><i class="icon-user"></i><span> About Me</span></a>
+                  <a href="#about"><i class="icon-group"></i><span> The Team</span></a>
                 </li>
                 <li class='tab'>
-                  <a href="#resume"><i class="icon-file-text"></i><span> Resume</span></a>
+                  <a href="#resume"><i class="icon-sitemap"></i><span> Nepton</span></a>
                 </li>
                 <li class='tab'>
-                  <a href="#portfolio"><i class="icon-heart"></i><span> Portfolio</span></a>
+                  <a href="#portfolio"><i class="icon-picture"></i><span> CAD</span></a>
                 </li>
                 <li class='tab'>
-                  <a href="#contact"><i class="icon-envelope"></i><span> Contact</span></a>
+                  <a href="#contact"><i class="icon-expand"></i><span> Interactive</span></a>
                 </li>
             </ul>
           <!-- End Tab List -->
