--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                             </div>
                             <div class="info">
                                 <h2>
-                                    Sunny Luthra
+                                    Team Nepton
                                 </h2>
                                 <h4>
                                     Animator / Photographer
@@ -87,7 +87,7 @@
                                 </p>
                             </div>
                         </div>
-                        <div class="g1">
+<!--                         <div class="g1">
                             <div class="main-links sidebar">
                                 <ul>
                                     <li>
@@ -104,7 +104,7 @@
                                     </li>
                                 </ul>
                             </div>
-                        </div>
+                        </div> -->
                         <div class="break"></div>
                         <div class="contact-info">
                           <div class="g1">
