--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-  <title>Sunny Luthra - Traveller - Free Thinker - Blah Blah</title>
+  <title>Team Nepton</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width">
   <link rel='shortcut icon' type='image/x-icon' href='favicon.ico' />
@@ -71,7 +71,7 @@
               <!-- About Tab Data -->
                 <div id="about">
                     <section class="clearfix">
-                        <div class="g2">
+                        <div class="g3">
                             <div class="photo">
                                 <img src="https://fbcdn-sphotos-e-a.akamaihd.net/hphotos-ak-frc1/582546_344156198979857_678123957_n.jpg" alt="Sunny Luthra">
                             </div>
@@ -80,7 +80,7 @@
                                     Team Nepton
                                 </h2>
                                 <h4>
-                                    Animator / Photographer
+                                    Engineers, Designers, Programmers
                                 </h4>
                                 <p>
                                     We are mRova, a Pune-based software development company. We love to develop Websites, Desktop Softwares and Mobile Applications.
