--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                     <section class="clearfix">
                         <div class="g3">
                             <div class="photo">
-                                <img src="https://fbcdn-sphotos-e-a.akamaihd.net/hphotos-ak-frc1/582546_344156198979857_678123957_n.jpg" alt="Sunny Luthra">
+                                <img src="//images/team.jpg" alt="Team Nepton">
                             </div>
                             <div class="info">
                                 <h2>
@@ -83,7 +83,7 @@
                                     Engineers, Designers, Programmers
                                 </h4>
                                 <p>
-                                    We are mRova, a Pune-based software development company. We love to develop Websites, Desktop Softwares and Mobile Applications.
+                                    We are Team Nepton, a group of young engineers from Stevens Institute of Technology with proficiency in industrial design, mechanical design, and software development.
                                 </p>
                             </div>
                         </div>
