--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
                             <div class="item-box clearfix">
                               <i class="icon-envelope"></i>
                               <div class="item-data">
-                                <h3><a href="mailto:sunny@mrova.com">sunny@mrova.com</a></h3>
+                                <h3><a href="mailto:filler@crap.com">filler@crap.com</a></h3>
                                 <p>Email Address</p>
                               </div>
                             </div>
@@ -120,7 +120,7 @@
                             <div class="item-box clearfix">
                               <i class="icon-facebook"></i>
                               <div class="item-data">
-                                <h3><a href="http://fb.me/luthra.sunny">luthra.sunny</a></h3>
+                                <h3><a href="filler@crap.com">filler.crap</a></h3>
                                 <p>Facebook Profile</p>
                               </div>
                             </div>
@@ -129,7 +129,7 @@
                             <div class="item-box clearfix">
                               <i class="icon-twitter"></i>
                               <div class="item-data">
-                                <h3><a href="http://twitter.com/mRovaSolutions">@mRovaSolutions</a></h3>
+                                <h3><a href="http://twitter.com/fillercrap">@fillercrap</a></h3>
                                 <p>Twitter Handle</p>
                               </div>
                             </div>
