--- a/index.html
+++ b/index.html
@@ -53,17 +53,17 @@
         <div id="tab-container" class="tab-container">
           <!-- Tab List -->
             <ul class='etabs'>
-                <li class='tab' id="tab-about">
-                  <a href="#about"><i class="icon-group"></i><span> The Team</span></a>
+                <li class='tab' id="tab-team">
+                  <a href="#team"><i class="icon-group"></i><span> The Team</span></a>
                 </li>
                 <li class='tab'>
-                  <a href="#resume"><i class="icon-sitemap"></i><span> Nepton</span></a>
+                  <a href="#nepton"><i class="icon-sitemap"></i><span> Nepton</span></a>
                 </li>
                 <li class='tab'>
-                  <a href="#portfolio"><i class="icon-picture"></i><span> CAD</span></a>
+                  <a href="#cad"><i class="icon-picture"></i><span> CAD</span></a>
                 </li>
                 <li class='tab'>
-                  <a href="#contact"><i class="icon-expand"></i><span> Interactive</span></a>
+                  <a href="#multimedia"><i class="icon-expand"></i><span> Multimedia</span></a>
                 </li>
             </ul>
           <!-- End Tab List -->
