--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
           <!-- End Tab List -->
             <div id="tab-data-wrap">
               <!-- About Tab Data -->
-                <div id="about">
+                <div id="team">
                     <section class="clearfix">
                         <div class="g3">
                             <div class="photo">
@@ -139,7 +139,7 @@
                 </div>
               <!-- End About Tab Data -->
               <!-- Resume Tab Data -->
-                <div id="resume">
+                <div id="nepton">
                     <section class="clearfix">
                         <div class="g2">
                             <h3>
@@ -268,7 +268,7 @@
                 </div>
               <!-- End Resume Tab Data -->
               <!-- Portfolio Tab Data -->
-                <div id="portfolio">
+                <div id="cad">
                     <section class="clearfix">
                         <div class="g1">
                             <div class="image">
@@ -336,7 +336,7 @@
                 </div>
               <!-- End Portfolio Data -->
               <!-- Contact Tab Data -->
-                <div id="contact">
+                <div id="multimedia">
                     <section class="clearfix">
                        <div class="g1">
                          <div class="sny-icon-box">
