--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                   <a href="#team"><i class="icon-group"></i><span> The Team</span></a>
                 </li>
                 <li class='tab'>
-                  <a href="#nepton"><i class="icon-sitemap"></i><span> Nepton</span></a>
+                  <a href="#nepton"><i class="icon-cogs"></i><span> Nepton</span></a>
                 </li>
                 <li class='tab'>
                   <a href="#cad"><i class="icon-picture"></i><span> CAD</span></a>
@@ -381,7 +381,7 @@
         <!-- End Tab Container -->
         <footer>
             <p>
-                Ferra twin delight ;)
+                Ferra twin delight ;) <i class="icon-female"></i><i class="icon-female"></i>
             </p>
         </footer>
     </div><!-- #main -->
