--- a/index.html
+++ b/index.html
@@ -271,12 +271,9 @@
                 <div id="cad">
                     <section class="clearfix">
 					
-						<div class="g3">
+						<div class="g3"><center>
 						<iframe width="640" height="480" src="https://sketchfab.com/models/9ddf03fb6dd8473e9ed93a7887b6f4f1/embed" frameborder="0" allowfullscreen mozallowfullscreen="true" webkitallowfullscreen="true" onmousewheel=""></iframe><p style="font-size: 13px; font-weight: normal; margin: 5px; color: #4A4A4A;">
-    <a href="https://sketchfab.com/models/9ddf03fb6dd8473e9ed93a7887b6f4f1?utm_medium=embed&utm_source=website&utm_campain=share-popup" target="_blank" style="font-weight: bold; color: #1CAAD9;">Nepton</a>
-    by <a href="https://sketchfab.com/teamnepton?utm_medium=embed&utm_source=website&utm_campain=share-popup" target="_blank" style="font-weight: bold; color: #1CAAD9;">teamnepton</a>
-    on <a href="https://sketchfab.com?utm_medium=embed&utm_source=website&utm_campain=share-popup" target="_blank" style="font-weight: bold; color: #1CAAD9;">Sketchfab</a>
-</p>
+</p></center>
 						</div>
 						
                         <!-- <div class="g1">
