--- a/index.html
+++ b/index.html
@@ -271,9 +271,10 @@
                 <div id="cad">
                     <section class="clearfix">
 					
-						<div class="g3"><center>
-						<iframe width="640" height="480" src="https://sketchfab.com/models/9ddf03fb6dd8473e9ed93a7887b6f4f1/embed" frameborder="0" allowfullscreen mozallowfullscreen="true" webkitallowfullscreen="true" onmousewheel=""></iframe><p style="font-size: 13px; font-weight: normal; margin: 5px; color: #4A4A4A;">
-</p></center>
+						<div class="g3">
+						<div class="cad"><center>
+						<iframe width="640" height="480" src="https://sketchfab.com/models/9ddf03fb6dd8473e9ed93a7887b6f4f1/embed" frameborder="0" allowfullscreen mozallowfullscreen="true" webkitallowfullscreen="true" onmousewheel=""></iframe></center>
+						</div>
 						</div>
 						
                         <!-- <div class="g1">
