--- a/index.html
+++ b/index.html
@@ -272,8 +272,8 @@
                     <section class="clearfix">
 					
 						<div class="g3">
-						<div class="cad"><center>
-						<iframe width="640" height="480" src="https://sketchfab.com/models/9ddf03fb6dd8473e9ed93a7887b6f4f1/embed" frameborder="0" allowfullscreen mozallowfullscreen="true" webkitallowfullscreen="true" onmousewheel=""></iframe></center>
+						<div class="cad">
+						<iframe src="https://sketchfab.com/models/9ddf03fb6dd8473e9ed93a7887b6f4f1/embed" frameborder="0" allowfullscreen mozallowfullscreen="true" webkitallowfullscreen="true" onmousewheel=""></iframe>
 						</div>
 						</div>
 						
