--- a/index.html
+++ b/index.html
@@ -389,7 +389,7 @@
 			  
 			<!-- Contact Tab Data -->
                 <div id="report">
-					<center><embed src="../report/index.html#view=FitH"/></center>
+					<center><embed src="../report/index.html#view=FitH" width="800" height="1050"/></center>
 				</div>
 				
             </div>
