update profile image

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                     <section class="clearfix">
                         <div class="g3">
                             <div class="photo">
-                                <img src="images/team.jpg" alt="Team Nepton">
+                                <img src="images/profile.jpg" alt="Team Nepton">
                             </div>
                             <div class="info">
                                 <h2>
