--- a/index.html
+++ b/index.html
@@ -112,10 +112,10 @@
                         <div class="contact-info">
                           <div class="g1">
                             <div class="item-box clearfix">
-                              <i class="icon-envelope"></i>
+                              <img src="images/nutting.jpg" alt="Hyun June Ferrabolli">
                               <div class="item-data">
-                                <h3><a href="mailto:filler@crap.com">filler@crap.com</a></h3>
-                                <p>Email Address</p>
+                                <h3>Hyun June Ferrabolli</h3>
+                                <p>Project Manager</p>
                               </div>
                             </div>
                           </div>
