--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                         <div class="contact-info">
                           <div class="g1">
                             <div class="item-box clearfix">
-                              <img src="images/nutting.jpg" alt="Hyun June Ferrabolli">
+                              <img src="images/nutting.jpg" height="75" width="75" alt="Hyun June Ferrabolli">
                               <div class="item-data">
                                 <h3>Hyun June Ferrabolli</h3>
                                 <p>Project Manager</p>
