--- a/index.html
+++ b/index.html
@@ -112,7 +112,9 @@
                         <div class="contact-info">
                           <div class="g1">
                             <div class="item-box clearfix">
+							<div class="photo">
                               <img src="images/nutting.jpg" height="75" width="75" alt="Hyun June Ferrabolli">
+							</div>
                               <div class="item-data">
                                 <h3>Hyun June Ferrabolli</h3>
                                 <p>Project Manager</p>
