--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
 							<div class="photo">
                               <img src="images/nutting.jpg" height="75" width="75" alt="Hyun June Ferrabolli">
 							</div>
-                              <div class="item-data">
+                              <div class="info">
                                 <h3>Hyun June Ferrabolli</h3>
                                 <p>Project Manager</p>
                               </div>
