--- a/index.html
+++ b/index.html
@@ -110,13 +110,13 @@
                         </div> -->
                         <div class="break"></div>
                         <div class="contact-info">
-                          <div class="g2">
+                          <div class="g1">
                             <div class="item-box clearfix">
 							<div class="photo">
                               <img src="images/nutting.jpg" height="75" width="75" alt="Hyun June Ferrabolli">
 							</div>
                               <div class="item-data">
-                                <h3>Hyun June Ferrabolli</h3>
+                                <h3>June</h3>
                                 <p>Project Manager</p>
                               </div>
                             </div>
