--- a/index.html
+++ b/index.html
@@ -112,8 +112,8 @@
                         <div class="contact-info">
                           <div class="g1">
                             <div class="item-box clearfix">
-							<div class="icon">
-                              <img src="images/nutting.jpg" height="75" width="75" alt="Hyun June Ferrabolli">
+							<div class="photo">
+                              <img src="images/nutting.jpg" alt="Hyun June Ferrabolli">
 							</div>
                               <div class="item-data">
                                 <h3>June</h3>
