--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                         <div class="contact-info">
                           <div class="g1">
                             <div class="item-box clearfix">
-							<div class="photo">
+							<div class="photoinfo">
                               <img src="images/nutting.jpg" alt="Hyun June Ferrabolli">
 							</div>
                               <div class="item-data">
