--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
                               <img src="images/nutting.jpg" alt="Hyun June Ferrabolli">
 							</div>
                               <div class="item-data">
-                                <h3>June</h3>
+                                <h3>Hyun June Ferrabolli</h3>
                                 <p>Project Manager</p>
                               </div>
                             </div>
