--- a/index.html
+++ b/index.html
@@ -132,10 +132,11 @@
                           </div>
                           <div class="g1">
                             <div class="item-box clearfix">
-                              <i class="icon-twitter"></i>
+                              <img src="https://media.licdn.com/media/p/2/005/09d/2b1/1cdda4e.jpg" alt="Jason Wong">
+							</div>
                               <div class="item-data">
-                                <h3><a href="http://twitter.com/fillercrap">@fillercrap</a></h3>
-                                <p>Twitter Handle</p>
+                                <h3>Jason Wong</h3>
+                                <p>Product Engineer</p>
                               </div>
                             </div>
                           </div>
