--- a/index.html
+++ b/index.html
@@ -132,7 +132,9 @@
                           </div>
                           <div class="g1">
                             <div class="item-box clearfix">
+							<div class="photoinfo">
                               <img src="https://media.licdn.com/media/p/2/005/09d/2b1/1cdda4e.jpg" alt="Jason Wong">
+							</div>
 							</div>
                               <div class="item-data">
                                 <h3>Jason Wong</h3>
