--- a/index.html
+++ b/index.html
@@ -136,8 +136,8 @@
                               <img src="https://media.licdn.com/media/p/2/005/09d/2b1/1cdda4e.jpg" alt="Jason Wong">
 							</div>
                               <div class="item-data">
-                                <h3>Jason Wong</h3>
-                                <p>Product Engineer</p>
+                                <h3><a href=""http://linkedin.com/in/jsnswong">Jason Wong</a></h3>
+                                <p>Product Engineer<br>Mechanical Engineering<br>Systems Engineering</p>
                               </div>
                             </div>
                           </div>
