--- a/index.html
+++ b/index.html
@@ -123,13 +123,16 @@
                           </div>
                           <div class="g1">
                             <div class="item-box clearfix">
-                              <i class="icon-facebook"></i>
+							<div class="photoinfo">
+                              <img src="https://media.licdn.com/media/AAEAAQAAAAAAAARtAAAAJGUwZTUwYTUxLTkyNzItNDc0NS04OGIzLTlhMjkwM2RiNDJhZA.jpg" alt="Hyun June Ferrabolli">
+							</div>
                               <div class="item-data">
-                                <h3><a href="filler@crap.com">filler.crap</a></h3>
-                                <p>Facebook Profile</p>
+                                <h3><a href="http://www.linkedin.com/in/hjferra">Hyun June Ferrabolli</a></h3>
+                                <p><b>Project Manager</b><br>Mechanical Engineering<br>Systems Engineering</p>
                               </div>
                             </div>
                           </div>
+                        </div>
                           <div class="g1">
                             <div class="item-box clearfix">
 							<div class="photoinfo">
@@ -137,7 +140,7 @@
 							</div>
                               <div class="item-data">
                                 <h3><a href=""http://linkedin.com/in/jsnswong">Jason Wong</a></h3>
-                                <p>Product Engineer<br>Mechanical Engineering<br>Systems Engineering</p>
+                                <p><b>Product Engineer</b><br>Mechanical Engineering<br>Systems Engineering</p>
                               </div>
                             </div>
                           </div>
