--- a/index.html
+++ b/index.html
@@ -113,11 +113,11 @@
                           <div class="g1">
                             <div class="item-box clearfix">
 							<div class="photoinfo">
-                              <img src="images/nutting.jpg" alt="Hyun June Ferrabolli">
+                              <img src="images/P&G_Logo.png" alt="P&G">
 							</div>
                               <div class="item-data">
-                                <h3>Hyun June Ferrabolli</h3>
-                                <p>Project Manager</p>
+                                <h3><a href="http://www.pg.com">P&G</a></h3>
+                                <p><b>Competition Sponsor</b><br>Procter & Gamble</p>
                               </div>
                             </div>
                           </div>
@@ -149,11 +149,11 @@
 						  <div class="g1">
                             <div class="item-box clearfix">
 							<div class="photoinfo">
-                              <img src="https://media.licdn.com/media/p/2/005/09d/2b1/1cdda4e.jpg" alt="Jason Wong">
+                              <img src="images/SASE_Logo.png" alt="SASE">
 							</div>
                               <div class="item-data">
-                                <h3><a href=""http://linkedin.com/in/jsnswong">Jason Wong</a></h3>
-                                <p><b>Product Engineer</b><br>Mechanical Engineering<br>Systems Engineering</p>
+                                <h3><a href="http://www.saseconnect.org/">SASE</a></h3>
+                                <p><b>Competition Organizer</b><br>Society of Asian Scientists & Engineers</p>
                               </div>
                             </div>
                           </div>
@@ -173,7 +173,7 @@
 						  <div class="g1">
                             <div class="item-box clearfix">
 							<div class="photoinfo">
-                              <img src="https://media.licdn.com/media/p/2/005/09d/2b1/1cdda4e.jpg" alt="Ryan Chen">
+                              <img src="images/ryan.jpg" alt="Ryan Chen">
 							</div>
                               <div class="item-data">
                                 <h3><a href="https://www.linkedin.com/in/ryan-chen-32877a73" alt="Ryan Chen">Ryan Chen</a></h3>
