--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                                     Engineers, Designers, Programmers
                                 </h4>
                                 <p>
-                                    We are Team Nepton, a group of young engineers from Stevens Institute of Technology with proficiency in industrial design, mechanical design, and software development.
+                                    We are Team Nepton, a group of young engineers from Stevens Institute of Technology with proficiency in engineering disciplines such as industrial design, mechanical design, and software development. Our commitment to excellence and innovation led our project, the Nepton, to place 1st in the InnoService Design Competition.
                                 </p>
                             </div>
                         </div>
@@ -443,7 +443,7 @@
         <!-- End Tab Container -->
         <footer>
             <p>
-                Ferra twin delight ;) <i class="icon-female"></i><i class="icon-female"></i>
+                Nepton &trade; was created with the help of Stevens Institute of Technology (2015) <i class="icon-thumbs-up"></i>
             </p>
         </footer>
     </div><!-- #main -->
