--- a/index.html
+++ b/index.html
@@ -443,7 +443,7 @@
         <!-- End Tab Container -->
         <footer>
             <p>
-                Nepton &trade; was created with the help of Stevens Institute of Technology (2015) <i class="icon-thumbs-up"></i>
+                <i class="icon-thumbs-up"></i> Nepton&trade; was created with the help of Stevens Institute of Technology (2015)
             </p>
         </footer>
     </div><!-- #main -->
