--- a/index.html
+++ b/index.html
@@ -432,9 +432,15 @@
 					   <div class="g3">
 					   <div class="cad">
 					   <iframe src="https://www.youtube.com/embed/l7pGpY8OVac" frameborder="0" allowfullscreen></iframe>
+					   </div>
+					   </div>
+					   
+					   <div class="g3">
+					   <div class="cad">
 					   <iframe src="https://www.youtube.com/embed/V-Qhom6LRfY" frameborder="0" allowfullscreen></iframe>
-					   </div><
-					   /div>
+					   </div>
+					   </div>
+
 					   
                     </section>
                 </div>
