--- a/index.html
+++ b/index.html
@@ -431,13 +431,13 @@
                        
 					   <div class="g3">
 					   <div class="youtube">
-					   <iframe src="https://www.youtube.com/embed/l7pGpY8OVac" frameborder="0" allowfullscreen></iframe>
+					   <iframe width="560" height="315 src="https://www.youtube.com/embed/l7pGpY8OVac" frameborder="0" allowfullscreen></iframe>
 					   </div>
 					   </div>
 					   
 					   <div class="g3">
 					   <div class="youtube">
-					   <iframe src="https://www.youtube.com/embed/V-Qhom6LRfY" frameborder="0" allowfullscreen></iframe>
+					   <iframe width="560" height="315 src="https://www.youtube.com/embed/V-Qhom6LRfY" frameborder="0" allowfullscreen></iframe>
 					   </div>
 					   </div>
 
