--- a/index.html
+++ b/index.html
@@ -435,7 +435,7 @@
 					   </div>
 					   </div>
 					   
-					   <p></p>
+					   <div class="g3"><p></p></div>
 					   
 					   <div class="g3">
 					   <div class="youtube">
