--- a/index.html
+++ b/index.html
@@ -192,15 +192,20 @@
                     <section class="clearfix">
                         <div class="g2">
                             <h3>
-                                Work Experience
+                                Nepton
                             </h3>
                             <ul class="no-list work">
                                 <li>
                                     <h5>
-                                        Freelance Web Designer
-                                    </h5><span class="label label-info">2009-2010</span>
+                                        Smart, Portable, Heated Beverage Container
+                                    </h5>
                                     <p>
-                                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam sodales urna non odio egestas tempor. Nunc vel vehicula ante.
+                                        The Nepton was conceptualized, designed, and prototyped as the ideal companion for your average college student - a coffee or tea addict glued to his or her smartphone. Nepton's many capabilities make the life of its user more pleasant and convenient with the following functionalities:
+										<br>
+										<ul>
+										<li>Bluetooth connectivity via an iPhone app for personal calibration, settings, and checking diagnostics.</li>
+										<li>Internal self-contained heating coil capable of heating a liquid inside the Nepton from room temperature to boiling.</li>
+										<li>Intuitive e-ink body exterior that dynamically changes colors to inform the user of the perfect temperature of their beverage.</li>
                                     </p>
                                 </li>
                                 <li>
@@ -450,7 +455,7 @@
 			  
 			<!-- Contact Tab Data -->
                 <div id="report">
-					<center><embed src="../report/index.html#view=FitH" width="800"/></center>
+					<center><embed src="../report/index.html#view=FitH" width="800" height="1024"/></center>
 				</div>
 				
             </div>
