--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
 										<ul>
 										<li>Bluetooth connectivity via an iPhone app for personal calibration, settings, and checking diagnostics.</li>
 										<li>Internal self-contained heating coil capable of heating a liquid inside the Nepton from room temperature to boiling.</li>
-										<li>Intuitive e-ink body exterior that dynamically changes colors to inform the user of the perfect temperature of their beverage!</li>
+										<li>Intuitive e-ink body exterior that dynamically changes colors to inform the user of the perfect temperature of their beverage.</li>
 										</ul>
                                     </p>
                                 </li>
