--- a/index.html
+++ b/index.html
@@ -203,9 +203,9 @@
                                         The Nepton was conceptualized, designed, and prototyped as the ideal companion for your average college student - a coffee or tea addict glued to his or her smartphone. Nepton's many capabilities make the life of its user more pleasant and convenient with the following functionalities:
 										<br>
 										<ul>
-										<li>Bluetooth connectivity via an iPhone app for personal calibration, settings, and checking diagnostics.</li>
-										<li>Internal self-contained heating coil capable of heating a liquid inside the Nepton from room temperature to boiling.</li>
-										<li>Intuitive e-ink body exterior that dynamically changes colors to inform the user of the perfect temperature of their beverage.</li>
+										<li><i class="icon-bluetooth"></i>Bluetooth connectivity via an iPhone app for personal calibration, settings, and checking diagnostics.</li>
+										<li><i class="icon-fire"></i>Internal self-contained heating coil capable of heating a liquid inside the Nepton from room temperature to boiling.</li>
+										<li><i class="icon-paint-brush"></i>Intuitive e-ink body exterior that dynamically changes colors to inform the user of the perfect temperature of their beverage.</li>
 										</ul>
                                     </p>
                                 </li>
