--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <link rel="apple-touch-icon-precomposed" href="apple-touch-icon-72x72-precomposed.png">
   <link rel="apple-touch-icon-precomposed" href="apple-touch-icon-114x114-precomposed.png">
   <link rel="apple-touch-icon-precomposed" href="apple-touch-icon-144x144-precomposed.png">
-  <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css" rel="stylesheet">
+  <link href="//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css" rel="stylesheet">
 
   <link rel="stylesheet" href="css/normalize.min.css">
   <link rel="stylesheet" href="css/main.css">
@@ -203,9 +203,9 @@
                                         The Nepton was conceptualized, designed, and prototyped as the ideal companion for your average college student - a coffee or tea addict glued to his or her smartphone. Nepton's many capabilities make the life of its user more pleasant and convenient with the following functionalities:
 										<br>
 										<ul>
-										<li><i class="icon-bluetooth"></i>Bluetooth connectivity via an iPhone app for personal calibration, settings, and checking diagnostics.</li>
+										<li><i class="icon-phone-sign"></i>Bluetooth connectivity via an iPhone app for personal calibration, settings, and checking diagnostics.</li>
 										<li><i class="icon-fire"></i>Internal self-contained heating coil capable of heating a liquid inside the Nepton from room temperature to boiling.</li>
-										<li><i class="icon-paint-brush"></i>Intuitive e-ink body exterior that dynamically changes colors to inform the user of the perfect temperature of their beverage.</li>
+										<li><i class="icon-pencil"></i>Intuitive e-ink body exterior that dynamically changes colors to inform the user of the perfect temperature of their beverage.</li>
 										</ul>
                                     </p>
                                 </li>
