--- a/index.html
+++ b/index.html
@@ -211,26 +211,14 @@
                                 </li>
                                 <li>
                                     <h5>
-                                        Python Programmer
+                                        Innoservice
                                     </h5><span class="label label-info">2010-2011</span>
                                     <p>
-                                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam sodales urna non odio egestas tempor. Nunc vel vehicula ante.
-                                    </p>
-                                </li>
-                                <li>
-                                    <h5>
-                                        Social Media Lunatic
-                                    </h5><span class="label label-info">2011-2012</span>
-                                    <p>
-                                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam sodales urna non odio egestas tempor. Nunc vel vehicula ante.
-                                    </p>
-                                </li>
-                                <li>
-                                    <h5>
-                                        Being Awesome
-                                    </h5><span class="label label-danger">2012-Till Death</span>
-                                    <p>
-                                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam sodales urna non odio egestas tempor. Nunc vel vehicula ante.
+                                        Innoservice is a national design competition developed by the Society of Asian Scientists and Engineers (SASE) and sponsored by Procter & Gamble.Innoservice was founded for collegiate students to not only develop new technologies using their scientific and engineering backgrounds, but also demonstrate their ability to sell their ideas.
+										<br>
+										One trend among today's consumers is life in an increasingly "smart" environment. In a world of smart phones, smart glasses, and smart homes, the way a consumer will live his or her everyday life is changing. The commercial possibilities enabled by the digital environment is enormous, but are there also new possibilities for how a consumer goods company can touch and improve the lives of these consumers?
+										<br>
+										<b>Design Objective:</b> Digital devices are connecting all aspects of life for consumers from home to lifestyle. Design a consumer product that complements the habits of the digitally connected consumer.
                                     </p>
                                 </li>
                             </ul>
