--- a/index.html
+++ b/index.html
@@ -203,9 +203,9 @@
                                         The Nepton was conceptualized, designed, and prototyped as the ideal companion for your average college student - a coffee or tea addict glued to his or her smartphone. Nepton's many capabilities make the life of its user more pleasant and convenient with the following functionalities:
 										<br>
 										<ul>
-										<li><i class="icon-phone-sign"></i> Bluetooth connectivity via an iPhone app for personal calibration, settings, and checking diagnostics.</li>
-										<li><i class="icon-fire"></i> Internal self-contained heating coil capable of heating a liquid inside the Nepton from room temperature to boiling.</li>
-										<li><i class="icon-pencil"></i> Intuitive e-ink body exterior that dynamically changes colors to inform the user of the perfect temperature of their beverage.</li>
+										<li><i class="icon-phone-sign"></i>  Bluetooth connectivity via an iPhone app for personal calibration, settings, and checking diagnostics.</li>
+										<li><i class="icon-fire"></i>  Internal self-contained heating coil capable of heating a liquid inside the Nepton from room temperature to boiling.</li>
+										<li><i class="icon-pencil"></i>  Intuitive e-ink body exterior that dynamically changes colors to inform the user of the perfect temperature of their beverage.</li>
 										</ul>
                                     </p>
                                 </li>
@@ -218,7 +218,7 @@
 										</p><p>
 										One trend among today's consumers is life in an increasingly "smart" environment. In a world of smart phones, smart glasses, and smart homes, the way a consumer will live his or her everyday life is changing. The commercial possibilities enabled by the digital environment is enormous, but are there also new possibilities for how a consumer goods company can touch and improve the lives of these consumers?
 										</p><p>
-										<b>Design Objective:</b> Digital devices are connecting all aspects of life for consumers from home to lifestyle. Design a consumer product that complements the habits of the digitally connected consumer.
+										<b>Design Objective:</b><br>Digital devices are connecting all aspects of life for consumers from home to lifestyle. Design a consumer product that complements the habits of the digitally connected consumer.
                                     </p>
                                 </li>
                             </ul>
