--- a/index.html
+++ b/index.html
@@ -207,14 +207,16 @@
 										<li><i class="icon-fire"></i>  Internal self-contained heating coil capable of heating a liquid inside the Nepton from room temperature to boiling.</li>
 										<li><i class="icon-pencil"></i>  Intuitive e-ink body exterior that dynamically changes colors to inform the user of the perfect temperature of their beverage.</li>
 										</ul>
+										<br>
+										This Github page is a compilation and running log of the effort, work, and accomplishments of the team.
                                     </p>
                                 </li>
                                 <li>
                                     <h5>
                                         Innoservice
-                                    </h5><span class="label label-info">2010-2011</span>
+                                    </h5><span class="label label-info">2014-2015</span>
                                     <p>
-                                        Innoservice is a national design competition developed by the Society of Asian Scientists and Engineers (SASE) and sponsored by Procter & Gamble.Innoservice was founded for collegiate students to not only develop new technologies using their scientific and engineering backgrounds, but also demonstrate their ability to sell their ideas.
+                                        <a href="http://www.saseconnect.org/sponsor/innoservice>Innoservice</a> is a national design competition developed by the Society of Asian Scientists and Engineers (SASE) and sponsored by Procter & Gamble. Innoservice was founded for collegiate students to not only develop new technologies using their scientific and engineering backgrounds, but also demonstrate their ability to sell their ideas.
 										</p><p>
 										One trend among today's consumers is life in an increasingly "smart" environment. In a world of smart phones, smart glasses, and smart homes, the way a consumer will live his or her everyday life is changing. The commercial possibilities enabled by the digital environment is enormous, but are there also new possibilities for how a consumer goods company can touch and improve the lives of these consumers?
 										</p><p>
@@ -222,36 +224,16 @@
                                     </p>
                                 </li>
                             </ul>
-                            <h3>
-                                Education
-                            </h3>
-                            <ul class="no-list work">
-                                <li>
-                                    <h5>
-                                        NoUse School
-                                    </h5><span class="label label-success">2001-2002</span>
-                                    <p>
-                                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam sodales urna non odio egestas tempor. Nunc vel vehicula ante.
-                                    </p>
-                                </li>
-                                <li>
-                                    <h5>
-                                        Super Useless College
-                                    </h5><span class="label label-warning">2002-2008</span>
-                                    <p>
-                                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam sodales urna non odio egestas tempor. Nunc vel vehicula ante.
-                                    </p>
-                                </li>
-                            </ul>
                         </div>
                         <div class="g1">
                             <div class="sidebar">
                                 <h3>
-                                    Skills
+                                    News
                                 </h3>
                                 <h5>
                                     Software
                                 </h5>
+								<div id="fb-root"></div><script>(function(d, s, id) {  var js, fjs = d.getElementsByTagName(s)[0];  if (d.getElementById(id)) return;  js = d.createElement(s); js.id = id;  js.src = "//connect.facebook.net/en_US/sdk.js#xfbml=1&version=v2.3";  fjs.parentNode.insertBefore(js, fjs);}(document, 'script', 'facebook-jssdk'));</script><div class="fb-post" data-href="https://www.facebook.com/SASE/posts/10153146096443992" data-width="500"><div class="fb-xfbml-parse-ignore"><blockquote cite="https://www.facebook.com/SASE/posts/10153146096443992"><p>We&#039;ve just received back the scores from the panel of judges, who have been hard at work evaluating this year&#039;s...</p>Posted by <a href="https://www.facebook.com/SASE/">Society of Asian Scientists and Engineers - SASE</a> on&nbsp;<a href="https://www.facebook.com/SASE/posts/10153146096443992">Monday, July 13, 2015</a></blockquote></div></div>
                                 <div class="meter emerald">
                                     <span style="width: 33.3%"><span>Photoshop</span></span>
                                 </div>
