--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
                         <div class="g5">
                             <div class="sidebar">
                                 <h3>
-                                    News
+                                    News!
                                 </h3>
                                 <h5>
                                     Software
