--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
                     <section class="clearfix">
                         <div class="g0">
                             <h3>
-                                Nepton
+                                Nepton!
                             </h3>
                             <ul class="no-list work">
                                 <li>
@@ -233,7 +233,7 @@
                         <div class="g1">
                             <div class="sidebar">
                                 <h3>
-                                    News!
+                                    News
                                 </h3>
                                 <h5>
                                     Software
