--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
 								<h5>
                                     Thanks everyone at Stevens for your support!
                                 </h5>
-								<img src="images/stevens_article.jpg">
+								<a href="http://www.stevens.edu/news/content/stevens-students-win-innoservice-design-competition"><img src="images/stevens_article.jpg"></a>
 								
 								<p></p>
 								
