--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
 								<p></p>
 								
 								<h5>
-                                    Moving on to the final round!
+                                    Moving on to the finals!
                                 </h5>
 								<a href="http://www.saseconnect.org/news/361-innerservice-finalists"><img src="images/sase_article.jpg"></a>
                             </div>
