--- a/index.html
+++ b/index.html
@@ -207,8 +207,7 @@
 										<li><i class="icon-fire"></i>  Internal self-contained heating coil capable of heating a liquid inside the Nepton from room temperature to boiling.</li>
 										<li><i class="icon-pencil"></i>  Intuitive e-ink body exterior that dynamically changes colors to inform the user of the perfect temperature of their beverage.</li>
 										</ul>
-										<br>
-										This Github page is a compilation and running log of the effort, work, and accomplishments of the team.
+										This Github page serves as as a compilation of work on Project Nepton.
                                     </p>
                                 </li>
                                 <li>
