--- a/index.html
+++ b/index.html
@@ -192,12 +192,12 @@
                     <section class="clearfix">
                         <div class="g0">
                             <h3>
-                                Nepton
+                                Introducing Nepton
                             </h3>
                             <ul class="no-list work">
                                 <li>
                                     <h5>
-                                        Smart, Portable, Heated Beverage Container
+                                        a Smart, Portable, Heated Beverage Container
                                     </h5>
                                     <p>
                                         The Nepton was conceptualized, designed, and prototyped as the ideal companion for your average college student - a coffee or tea addict glued to his or her smartphone. Nepton's many capabilities make the life of its user more pleasant and convenient with the following functionalities:
