--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
                                         Innoservice
                                     </h5><span class="label label-info">2014-2015</span>
                                     <p>
-                                        <a href="http://www.saseconnect.org/sponsor/innoservice">Innoservice</a> is a national design competition developed by the Society of Asian Scientists and Engineers (SASE) and sponsored by Procter & Gamble. Innoservice was founded for collegiate students to not only develop new technologies using their scientific and engineering backgrounds, but also demonstrate their ability to sell their ideas.
+                                        <a href="http://www.saseconnect.org/sponsor/innoservice">Innoservice</a> is a national design competition developed by the Society of Asian Scientists and Engineers (SASE) and sponsored by Procter & Gamble (P&G). Innoservice was founded for collegiate students to not only develop new technologies using their scientific and engineering backgrounds, but also demonstrate their ability to sell their ideas.
 									</p>
 									<p>
 										One trend among today's consumers is life in an increasingly "smart" environment. In a world of smart phones, smart glasses, and smart homes, the way a consumer will live his or her everyday life is changing. The commercial possibilities enabled by the digital environment is enormous, but are there also new possibilities for how a consumer goods company can touch and improve the lives of these consumers?
