--- a/index.html
+++ b/index.html
@@ -205,9 +205,10 @@
 										<ul>
 										<li><i class="icon-phone-sign"></i>  Bluetooth connectivity via an iPhone app for personal calibration, settings, and checking diagnostics.</li>
 										<li><i class="icon-fire"></i>  Internal self-contained heating coil capable of heating a liquid inside the Nepton from room temperature to boiling.</li>
+										<li><i class="icon-map-marker"></i> Independent from outlets or external power sources with a rechargable battery that allows use anywhere and everywhere. .</li>
 										<li><i class="icon-pencil"></i>  Intuitive e-ink body exterior that dynamically changes colors to inform the user of the perfect temperature of their beverage.</li>
 										</ul>
-										This Github page serves as as a compilation of work on Project Nepton.
+										This Github page serves as a compilation of work on Project Nepton.
                                     </p>
                                 </li>
                                 <li>
