--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                                     Engineers, Designers, Programmers
                                 </h4>
                                 <p>
-                                    We are Team Nepton, a group of young engineers from Stevens Institute of Technology with proficiency in engineering disciplines such as industrial design, mechanical design, and software development. Our commitment to excellence and innovation led our project, the Nepton, to place 1st in the InnoService Design Competition.
+                                    We are Team Nepton, a group of young engineers from Stevens Institute of Technology with proficiency in engineering disciplines such as industrial design, mechanical design, and software development. Our commitment to excellence and innovation led our project, the Nepton, to place 1st in the 2014-2015 InnoService Design Competition out of over two dozen teams nationally.
                                 </p>
                             </div>
                         </div>
@@ -205,7 +205,7 @@
 										<ul>
 										<li><i class="icon-phone-sign"></i>  Bluetooth connectivity via an iPhone app for personal calibration, settings, and checking diagnostics.</li>
 										<li><i class="icon-fire"></i>  Internal self-contained heating coil capable of heating a liquid inside the Nepton from room temperature to boiling.</li>
-										<li><i class="icon-map-marker"></i> Independent from outlets or external power sources with a rechargable battery that allows use anywhere and everywhere. .</li>
+										<li><i class="icon-map-marker"></i>  Independent from outlets or external power sources with a rechargable battery that allows use anywhere and everywhere. .</li>
 										<li><i class="icon-pencil"></i>  Intuitive e-ink body exterior that dynamically changes colors to inform the user of the perfect temperature of their beverage.</li>
 										</ul>
 										This Github page serves as a compilation of work on Project Nepton.
