--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                                     Engineers, Designers, Programmers
                                 </h4>
                                 <p>
-                                    We are Team Nepton, a group of young engineers from Stevens Institute of Technology with proficiency in engineering disciplines such as industrial design, mechanical design, and software development. Our commitment to excellence and innovation led our project, the Nepton, to place 1st in the 2014-2015 InnoService Design Competition out of over two dozen teams nationally.
+                                    We are a group of young engineers from Stevens Institute of Technology with proficiency in diverse areas such as industrial design, mechanical simulation, and software development. Our commitment to excellence and innovation led our project, the Nepton, to place 1st in the 2014-2015 InnoService Design Competition out of over two dozen teams nationally.
                                 </p>
                             </div>
                         </div>
