--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
 							</div>
                               <div class="item-data">
                                 <h3><a href="https://www.linkedin.com/in/ryan-chen-32877a73" alt="Ryan Chen">Ryan Chen</a></h3>
-                                <p><b>Industrial Designer</b><br>Mechanical Engineering<br>Gender Studies</p>
+                                <p><b>Industrial Designer</b><br>Mechanical Engineering</p>
                               </div>
                             </div>
                           </div>
